# cmake-self-reference

./: README.txt
Complete/: CMakeLists.txt  MultiCPackConfig.cmake  tutorial.cxx
Complete/MathFunctions/: CMakeLists.txt  MakeTable.cmake
Step1/: CMakeLists.txt  SquareRootConfig.h.in  tutorial.cxx
Step1/.cache/clangd/index/: SquareRoot.cxx.525792786A3FE405.idx
Step10/: CMakeLists.txt  build.sh  install.sh
Step10/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  MathFunctions.h  mysqrt.cxx
Step11/: CMakeLists.txt  Config.cmake.in  License.txt  install.sh  square_root.cxx
Step11/MathFunctions/: CMakeLists.txt
Step12/: CMakeLists.txt  MultiCPackConfig.cmake  install.sh
Step12/MathFunctions/: CMakeLists.txt
Step12/_CPack_Packages/Darwin/TGZ/SquareRoot-1.0-Darwin/include/: TutorialConfig.h
Step12/_CPack_Packages/Darwin/TGZ/SquareRoot-1.0-Darwin/lib/: libMathFunctions.1.0.0.dylib  libMathFunctionsd.1.0.0.dylib
Step12/_CPack_Packages/Darwin/TGZ/SquareRoot-1.0-Darwin/lib/cmake/MathFunctions/: MathFunctionsTargets.cmake
Step12/_CPack_Packages/Darwin/TGZ/Tutorial-1.0-Darwin/lib/cmake/MathFunctions/: MathFunctionsTargets-debug.cmake  MathFunctionsTargets-release.cmake  MathFunctionsTargets.cmake
Step12/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  MakeTable  Makefile  MathFunctionsTargets.cmake  SquareRootd  cmake_install.cmake  install_manifest.txt  libMathFunctionsd.1.0.0.dylib
Step12/debug/MathFunctions/: Makefile  cmake_install.cmake
Step12/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  MakeTable  Makefile  MathFunctionsTargets.cmake  SquareRoot  cmake_install.cmake  install_manifest.txt  libMathFunctions.1.0.0.dylib
Step12/release/MathFunctions/: Makefile  cmake_install.cmake
Step2/: CMakeLists.txt  build.sh  tutorial.cxx
Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Step3/: CMakeLists.txt
Step3/MathFunctions/: CMakeLists.txt
Step4/: CMakeLists.txt
Step4/MathFunctions/: CMakeLists.txt
Step5/: CMakeLists.txt  install.sh
Step5/MathFunctions/: CMakeLists.txt
Step6/: CMakeLists.txt  SquareRootConfig.h.in
Step6/MathFunctions/: CMakeLists.txt
Step7/: CTestConfig.cmake  tutorial.cxx
Step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step8/: CMakeLists.txt
Step8/MathFunctions/: CMakeLists.txt  MakeTable.cmake
Step9/: CMakeLists.txt
Step9/MathFunctions/: CMakeLists.txt
